클라이언트-서버 HTTP API 연동 구현
- CEP 패널에서 fetch POST /nasUpload 요청으로 items, projectPath 전송
- Express 서버에 /nasUpload POST 추가하여 JSON 바디 파싱 및 로직 처리
- evalScript 콜백을 Promise로 래핑하고 async/await 사용해 projectPath 비동기 수신 지원

--- a/morph_panel/package.json
+++ b/morph_panel/package.json
@@ -2,12 +2,12 @@
   "name": "morph_panel",
   "version": "0.0.1",
   "private": true,
-  "type": "module",
-  "scripts": {
-  },
+  "type": "commonjs",
+  "main": "js/index.js",
+  "scripts": {},
   "dependencies": {
-  },
-  "devDependencies": {
+    "express": "^5.1.0",
+    "request": "^2.88.2"
   },
   "browserslist": [
     "last 1 version, not dead, ie >= 11"
